--- a/index.html
+++ b/index.html
@@ -5,84 +5,116 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link href="./css/styles.css" rel="stylesheet" />
   </head>
 
   <body>
     <!--Header-->
-    <header>
-      <a href="./index.html">WebStudio</a>
+    <header class="header-section">
+      <a class="logo-black" href="./index.html"><span class="logo-web">Web</span>Studio</a>
 
-      <nav>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+      <nav class="navigation">
+        <ul class="navigation-list list">
+          <li class="navigation-item">
+            <a class="navigation-link link current" href="./index.html" aria-current="page"
+              >Студия</a
+            >
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link link" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link link" href="./contacts.html">Контакты</a>
+          </li>
         </ul>
       </nav>
 
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="contacts-list list">
+        <li class="contacts-item">
+          <a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="contacts-item">
+          <a class="contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
 
     <!--Main-->
     <main>
       <!--Section-1 hero-->
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="hero-section">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button class="hero-button" type="button">Заказать услугу</button>
       </section>
 
       <!--Section-2 conses-->
-      <section>
+      <section class="conces-section">
         <h2 hidden>Наши преимущества</h2>
-        <ul>
-          <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+        <ul class="conses-list list">
+          <li class="conses-item">
+            <h3 class="conses-heading">Внимание к деталям</h3>
+            <p class="conses-text">
+              Идейные соображения, а также начало повседневной работы по формированию позиции.
+            </p>
           </li>
-          <li>
-            <h3>Пунктуальность</h3>
-            <p>
+          <li class="conses-item">
+            <h3 class="conses-heading">Пунктуальность</h3>
+            <p class="conses-text">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
-          <li>
-            <h3>Планирование</h3>
-            <p>
+          <li class="conses-item">
+            <h3 class="conses-heading">Планирование</h3>
+            <p class="conses-text">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
-          <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          <li class="conses-item">
+            <h3 class="conses-heading">Современные технологии</h3>
+            <p class="conses-text">
+              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+            </p>
           </li>
         </ul>
       </section>
 
       <!--Section-3 what we do-->
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-          <li>
+      <section class="what-we-do-section">
+        <h2 class="subtitle">Чем мы занимаемся</h2>
+        <ul class="what-we-do-list list">
+          <li class="what-we-do-item">
             <img
+              class="what-we-do-image"
               src="./images/box_1.jpg"
               alt="человек набирает программный код на планшете"
               width="370"
               height="294"
             />
           </li>
-          <li>
+          <li class="what-we-do-item">
             <img
+              class="what-we-do-image"
               src="./images/box_2.jpg"
               alt="человек на мониторе ноутбука выбирает вариант верстки контента на странице мобильной версии сайта"
               width="370"
               height="294"
             />
           </li>
-          <li>
+          <li class="what-we-do-item">
             <img
+              class="what-we-do-image"
               src="./images/box_3.jpg"
               alt="человек на планшете выбирает один из цветов из цветового
             круга"
@@ -94,46 +126,80 @@
       </section>
 
       <!--Section-4 our team-->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
-            <img src="./images/img_1.jpg" alt="Фото Игоря Демьяненко" width="270" height="260" />
-            <h3>Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
+      <section class="our-team-section">
+        <h2 class="subtitle">Наша команда</h2>
+        <ul class="our-team-list list">
+          <li class="our-team-item">
+            <img
+              class="our-team-image"
+              src="./images/img_1.jpg"
+              alt="Фото Игоря Демьяненко"
+              width="270"
+              height="260"
+            />
+            <h3 class="our-team-heading">Игорь Демьяненко</h3>
+            <p class="our-team-text" lang="en">Product Designer</p>
           </li>
-          <li>
-            <img src="./images/img_2.jpg" alt="Фото Ольги Репиной" width="270" height="260" />
-            <h3>Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
+          <li class="our-team-item">
+            <img
+              class="our-team-image"
+              src="./images/img_2.jpg"
+              alt="Фото Ольги Репиной"
+              width="270"
+              height="260"
+            />
+            <h3 class="our-team-heading">Ольга Репина</h3>
+            <p class="our-team-text" lang="en">Frontend Developer</p>
           </li>
-          <li>
-            <img src="./images/img_3.jpg" alt="Фото Николая Тарасова" width="270" height="260" />
-            <h3>Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
+          <li class="our-team-item">
+            <img
+              class="our-team-image"
+              src="./images/img_3.jpg"
+              alt="Фото Николая Тарасова"
+              width="270"
+              height="260"
+            />
+            <h3 class="our-team-heading">Николай Тарасов</h3>
+            <p class="our-team-text" lang="en">Marketing</p>
           </li>
-          <li>
-            <img src="./images/img-4.jpg" alt="Фото Михаила Ермакова" width="270" height="260" />
-            <h3>Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
+          <li class="our-team-item">
+            <img
+              class="our-team-image"
+              src="./images/img-4.jpg"
+              alt="Фото Михаила Ермакова"
+              width="270"
+              height="260"
+            />
+            <h3 class="our-team-heading">Михаил Ермаков</h3>
+            <p class="our-team-text" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
     <!--Footer-->
-    <footer>
-      <a href="">WebStudio</a>
+    <footer class="footer-section">
+      <a class="logo-white" href="./index.html"><span class="logo-web">Web</span>Studio</a>
 
       <address>
-        <ul>
-          <li>
-            <a href="https://bit.ly/3pXMvUd" target="_blank" rel="noreferrer noopener"
+        <ul class="footer-list list">
+          <li class="footer-item">
+            <a
+              class="footer-link-address link"
+              href="https://bit.ly/3pXMvUd"
+              target="_blank"
+              rel="noreferrer noopener"
               >г. Киев, пр-т Леси Украинки, 26
             </a>
           </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li class="footer-item">
+            <a class="footer-link-contacts link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="footer-item">
+            <a class="footer-link-contacts link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
         </ul>
       </address>
     </footer>
