--- a/contacts.html
+++ b/contacts.html
@@ -5,25 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
+
     <link href="./css/styles.css" rel="stylesheet" />
   </head>
 
   <body>
     <!--Header-->
     <header class="header-section">
-      <a class="logo-black" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+      <a class="logo-black link" href="./index.html"><span class="logo-web">Web</span>Studio</a>
 
       <nav class="navigation">
         <ul class="navigation-list list">
@@ -41,12 +37,12 @@
         </ul>
       </nav>
 
-      <ul class="header-list list">
-        <li class="header-item">
-          <a class="header-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <ul class="contacts-list list">
+        <li class="contacts-item">
+          <a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
-        <li class="header-item">
-          <a class="header-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+        <li class="contacts-item">
+          <a class="contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -58,7 +54,7 @@
 
     <!--Footer-->
     <footer class="footer-section">
-      <a class="logo-white" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+      <a class="logo-white link" href="./index.html"><span class="logo-web">Web</span>Studio</a>
 
       <address>
         <ul class="footer-list list">
