--- a/index.html
+++ b/index.html
@@ -5,25 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
+
     <link href="./css/styles.css" rel="stylesheet" />
   </head>
 
   <body>
     <!--Header-->
     <header class="header-section">
-      <a class="logo-black" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+      <a class="logo-black link" href="./index.html"><span class="logo-web">Web</span>Studio</a>
 
       <nav class="navigation">
         <ul class="navigation-list list">
@@ -97,8 +93,8 @@
           <li class="what-we-do-item">
             <img
               class="what-we-do-image"
-              src="./images/box_1.jpg"
-              alt="человек набирает программный код на планшете"
+              src="./images/wwd-img-1.jpg"
+              alt="Человек набирает программный код на планшете"
               width="370"
               height="294"
             />
@@ -106,8 +102,8 @@
           <li class="what-we-do-item">
             <img
               class="what-we-do-image"
-              src="./images/box_2.jpg"
-              alt="человек на мониторе ноутбука выбирает вариант верстки контента на странице мобильной версии сайта"
+              src="./images/wwd-img-2.jpg"
+              alt="Человек на мониторе ноутбука выбирает вариант верстки контента на странице мобильной версии сайта"
               width="370"
               height="294"
             />
@@ -115,8 +111,8 @@
           <li class="what-we-do-item">
             <img
               class="what-we-do-image"
-              src="./images/box_3.jpg"
-              alt="человек на планшете выбирает один из цветов из цветового
+              src="./images/wwd-img-3.jpg"
+              alt="Человек на планшете выбирает один из цветов из цветового
             круга"
               width="370"
               height="294"
@@ -132,7 +128,7 @@
           <li class="our-team-item">
             <img
               class="our-team-image"
-              src="./images/img_1.jpg"
+              src="./images/our-team-img-1.jpg"
               alt="Фото Игоря Демьяненко"
               width="270"
               height="260"
@@ -143,7 +139,7 @@
           <li class="our-team-item">
             <img
               class="our-team-image"
-              src="./images/img_2.jpg"
+              src="./images/our-team-img-2.jpg"
               alt="Фото Ольги Репиной"
               width="270"
               height="260"
@@ -154,7 +150,7 @@
           <li class="our-team-item">
             <img
               class="our-team-image"
-              src="./images/img_3.jpg"
+              src="./images/our-team-img-3.jpg"
               alt="Фото Николая Тарасова"
               width="270"
               height="260"
@@ -165,7 +161,7 @@
           <li class="our-team-item">
             <img
               class="our-team-image"
-              src="./images/img-4.jpg"
+              src="./images/our-team-img-4.jpg"
               alt="Фото Михаила Ермакова"
               width="270"
               height="260"
@@ -179,7 +175,7 @@
 
     <!--Footer-->
     <footer class="footer-section">
-      <a class="logo-white" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+      <a class="logo-white link" href="./index.html"><span class="logo-web">Web</span>Studio</a>
 
       <address>
         <ul class="footer-list list">
