--- a/portfolio.html
+++ b/portfolio.html
@@ -5,25 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
+
     <link href="./css/styles.css" rel="stylesheet" />
   </head>
 
   <body>
     <!--Header-->
     <header class="header-section">
-      <a class="logo-black" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+      <a class="logo-black link" href="./index.html"><span class="logo-web">Web</span>Studio</a>
 
       <nav class="navigation">
         <ul class="navigation-list list">
@@ -41,19 +37,19 @@
         </ul>
       </nav>
 
-      <ul class="header-list list">
-        <li class="header-item">
-          <a class="header-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <ul class="contacts-list list">
+        <li class="contacts-item">
+          <a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
-        <li class="header-item">
-          <a class="header-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+        <li class="contacts-item">
+          <a class="contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
 
     <!--Main-->
     <main>
-      <!--Section-1-projects filter-->
+      <!--Portfolio filter-->
       <section class="portfofio-filter-section">
         <h1 hidden>Портфолио</h1>
 
@@ -75,59 +71,135 @@
           </li>
         </ul>
 
-        <!--filter-all-->
-        <ul class="list">
-          <li>
-            <img src="" alt="" />
-            <h2></h2>
-            <p></p>
+        <!--filter-page-all-->
+
+        <ul class="filter-page-all list">
+          <li class="filter-item">
+            <a class="filter-link link" href="">
+              <img
+                class="filter-img"
+                src="./images/filter-img-1.jpg"
+                alt="Главная страница сайта на ноутбуке"
+                width="370"
+                height="294"
+              />
+              <h2 class="filter-heading">Технокряк</h2>
+              <p class="filter-text">Веб-сайт</p>
+            </a>
           </li>
-          <li>
-            <img src="" alt="" />
-            <h2></h2>
-            <p></p>
+          <li class="filter-item">
+            <a class="filter-link link" href="">
+              <img
+                class="filter-img"
+                src="./images/filter-img-2.jpg"
+                alt="Баскетбольный постер"
+                width="370"
+                height="294"
+              />
+              <h2 class="filter-heading">
+                Постер <span lang="en">New Orlean vs Golden Star</span>
+              </h2>
+              <p class="filter-text">Дизайн</p>
+            </a>
           </li>
-          <li>
-            <img src="" alt="" />
-            <h2></h2>
-            <p></p>
+          <li class="filter-item">
+            <a class="filter-link link" href="">
+              <img
+                class="filter-img"
+                src="./images/filter-img-3.jpg"
+                alt="Логотип ресторана"
+                width="370"
+                height="294"
+              />
+              <h2 class="filter-heading">Ресторан <span lang="en">Seafood</span></h2>
+              <p class="filter-text">Приложение</p>
+            </a>
           </li>
-          <li>
-            <img src="" alt="" />
-            <h2></h2>
-            <p></p>
+          <li class="filter-item">
+            <a class="filter-link link" href="">
+              <img
+                class="filter-img"
+                src="./images/filter-img-4.jpg"
+                alt="Полноразмерные наушники"
+                width="370"
+                height="294"
+              />
+              <h2 class="filter-heading">Проект <span lang="en">Prime</span></h2>
+              <p class="filter-text">Маркетинг</p>
+            </a>
           </li>
-          <li>
-            <img src="" alt="" />
-            <h2></h2>
-            <p></p>
+          <li class="filter-item">
+            <a class="filter-link link" href="">
+              <img
+                class="filter-img"
+                src="./images/filter-img-5.jpg"
+                alt="Две коробки"
+                width="370"
+                height="294"
+              />
+              <h2 class="filter-heading">Проект <span lang="en">Boxes</span></h2>
+              <p class="filter-text">Приложение</p>
+            </a>
           </li>
-          <li>
-            <img src="" alt="" />
-            <h2></h2>
-            <p></p>
+          <li class="filter-item">
+            <a class="filter-link link" href="">
+              <img
+                class="filter-img"
+                src="./images/filter-img-6.jpg"
+                alt="Главная страница сайта на мониторе"
+                width="370"
+                height="294"
+              />
+              <h2 class="filter-heading" lang="en">Inspiration has no Borders</h2>
+              <p class="filter-text">Веб-сайт</p>
+            </a>
           </li>
-          <li>
-            <img src="" alt="" />
-            <h2></h2>
-            <p></p>
+          <li class="filter-item">
+            <a class="filter-link link" href="">
+              <img
+                class="filter-img"
+                src="./images/filter-img-7.jpg"
+                alt="Разворот журнала"
+                width="370"
+                height="294"
+              />
+              <h2 class="filter-heading">Издание <span lang="en">Limited Edition</span></h2>
+              <p class="filter-text">Дизайн</p>
+            </a>
           </li>
-          <li>
-            <img src="" alt="" />
-            <h2></h2>
-            <p></p>
+          <li class="filter-item">
+            <a class="filter-link link" href="">
+              <img
+                class="filter-img"
+                src="./images/filter-img-8.jpg"
+                alt="Бирка"
+                width="370"
+                height="294"
+              />
+              <h2 class="filter-heading">Проект <span lang="en">LAB</span></h2>
+              <p class="filter-text">Маркетинг</p>
+            </a>
           </li>
-          <li>
-            <img src="" alt="" />
-            <h2></h2>
-            <p></p>
+          <li class="filter-item">
+            <a class="filter-link link" href="">
+              <img
+                class="filter-img"
+                src="./images/filter-img-9.jpg"
+                alt="Главная страница приложения на ноутбуке"
+                width="370"
+                height="294"
+              />
+              <h2 class="filter-heading" lang="en">Growing Business</h2>
+              <p class="filter-text">Приложение</p>
+            </a>
           </li>
         </ul>
       </section>
     </main>
+
     <!--Footer-->
     <footer class="footer-section">
-      <a class="logo-white" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+      <a class="logo-white link" href="./index.html"><span class="logo-web">Web</span>Studio</a>
 
       <address>
         <ul class="footer-list list">
