--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <footer class="footer-section">
       <a class="logo-white link" href="./index.html"><span class="logo-web">Web</span>Studio</a>
 
-      <address>
+      <address class="footer-adress">
         <ul class="footer-list list">
           <li class="footer-item">
             <a
